검색버튼엔터로 기능추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#501D1D",
         "titleBar.activeBackground": "#702829",
         "titleBar.activeForeground": "#FEFBFB"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
